# sdk-examples

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  test-svm.cjs  test-svm.js  tsconfig.json
src/: generate-depth-html.ts  setup.ts
src-rs/: README.md  setup.rs
src-rs/quickstart/: 01-init-pool.rs  02-read-pool.rs  03-write-pool.rs  04-spread-config.rs  05-delta-staleness.rs  06-authority-transfer.rs
src-ts/: README.md
src-ts/quickstart/: 01-initialize-pool.ts  02-read-pool-state.ts  03-write-pool-updates.ts  05-delta-staleness.ts  06-authority-transfer.ts  07-alternate-mode-pool.ts
src/quickstart/: 01-initialize-pool.test.ts  01-initialize-pool.ts  02-read-pool-state.ts  03-write-pool-updates.test.ts  03-write-pool-updates.ts  04-spread-config.ts
src/simulations/: 01-depth-curves.ts  02-interpolation-comparison.test.ts  02-interpolation-comparison.ts
