[package]
name = "hadron-examples-rs"
version = "0.1.0"
edition = "2021"
description = "Rust examples for the Hadron AMM SDK"

[[bin]]
name = "init"
path = "src-rs/quickstart/01-init-pool.rs"

[[bin]]
name = "read"
path = "src-rs/quickstart/02-read-pool.rs"

[[bin]]
name = "write"
path = "src-rs/quickstart/03-write-pool.rs"

[[bin]]
name = "spread-config"
path = "src-rs/quickstart/04-spread-config.rs"

[[bin]]
name = "delta-staleness"
path = "src-rs/quickstart/05-delta-staleness.rs"

[[bin]]
name = "authority"
path = "src-rs/quickstart/06-authority-transfer.rs"

[dependencies]
hadron-sdk = { version = "0.3", features = ["rpc"] }
solana-sdk = "3"
solana-rpc-client = "3"
solana-commitment-config = "3"
solana-keypair = "3"
solana-system-interface = { version = "3", features = ["bincode"] }
solana-pubkey = "3"
solana-instruction = "3"
solana-signature = "3"
solana-transaction = "3"
spl-token = { version = "9", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8", features = ["no-entrypoint"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
chrono = "0.4"
